[B] Fix CSS overflow property on .secondary-nav

--- a/client/src/theme/Components/backend/navigation/_secondary-nav.scss
+++ b/client/src/theme/Components/backend/navigation/_secondary-nav.scss
@@ -57,7 +57,7 @@
 
   &:not(.panel-nav) {
     white-space: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
     display: none;
 
     li {
